--- a/MongoDB-No-SQL/.classpath
+++ b/MongoDB-No-SQL/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="C:/no-sql-mongodb/mongo-java-driver-2.12.2.jar" sourcepath="C:/Users/Usuario/.m2/repository/org/mongodb/mongo-java-driver/2.12.2/mongo-java-driver-2.12.2-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/Tom/itba/nosql/mongo-java-driver-2.12.2 (1).jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
